Add basic page structure and required css

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/b2ef2e6fc4.js" crossorigin="anonymous"></script>
+    <!-- Internal CSS -->
+    <link rel="stylesheet" href="static/css/style.css">
     <title>RefArchive - {% block title %}{% endblock %}</title>
 </head>
 <body>
+    <header>
+        <nav>
+          <div class="logo">
+            <a href="">RefArchive</a>
+          </div>
+          <ul class="nav-links">
+            <a href="">Home</a>
+            <a href="">Your RefArchive</a>
+            <a href="">Profile</a>
+            <a href="">Add to RefArchive</a>
+            <a href="">Log Out</a>
+            <a href="">Log in</a>
+            <a href="#">Register</a>
+          </ul>
+          <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+          </div>
+        </nav>
+    </header>
 
+      <!-- Main Page Content Section -->
+    <main class="main_content_section" aria-label="Main Content">
     {% block content %}
     {% endblock %}
-    
+    </main>
+
+    <footer>
+        <div>
+          Copyright&copy; RefArchive 2023
+        </div>
+        <div id="footer_social">
+          <ul>
+            <li><a href="http://www.youtube.com" target="_blank" aria-label="Link to our Youtube channel"><i
+                  class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="http://www.twitter.com" target="_blank" aria-label="Link to our Twitter"><i
+                  class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="http://www.facebook.com" target="_blank" aria-label="Link to our Facebook page"><i
+                  class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="http://www.instagram.com" target="_blank" aria-label="Link to our Instagram page"><i
+                  class="fa-brands fa-instagram"></i></a></li>
+          </ul>
+        </div>
+    </footer>
+
+    <!-- Internal JavaScript -->
+    <script src='static/js/script.js'></script>
+
 </body>
 </html>
