--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,12 +8,17 @@ body {
     grid-template-columns: 1rem 1fr 1rem;
     grid-template-areas:
         "header header header"
+        "...... flashes  ....."
         "....... main  ......"
         "footer footer footer";
 }
 
 header {
     grid-area: header;
+}
+
+.flashes {
+    grid-area: flashes;
 }
 
 .main_content_section {
@@ -117,3 +122,11 @@ footer {
 #footer_social i:hover {
     transform: scale(1.5);
 }
+
+/* Materialize Modifications */
+
+.btn-large {
+    width: 90%;
+}
+
+/* Text Modifications */
