--- a/templates/base.html
+++ b/templates/base.html
@@ -15,18 +15,18 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="grey darken-3">
           <div class="logo">
-            <a href="">RefArchive</a>
+            <a href="{{ url_for('home_page') }}">RefArchive</a>
           </div>
           <ul class="nav-links">
-            <a href="">Home</a>
+            <a href="{{ url_for('home_page') }}">Home</a>
             <a href="">Your RefArchive</a>
             <a href="">Profile</a>
             <a href="">Add to RefArchive</a>
             <a href="">Log Out</a>
-            <a href="">Log in</a>
-            <a href="#">Register</a>
+            <a href="">Log In</a>
+            <a href="{{ url_for('register') }}">Register</a>
           </ul>
           <div class="burger">
             <div class="line1"></div>
@@ -37,6 +37,7 @@
     </header>
 
     <!-- Flashed Messages -->
+    <section>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category, message in messages %}
@@ -45,7 +46,8 @@
             </div>
             {% endfor %}
         {% endif %}
-    {% endwith %}    
+    {% endwith %}
+    </section>    
 
     <!-- Main Page Content Section -->
     <main class="main_content_section" aria-label="Main Content">
