Wire up log out link to logout function

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
             <a href="">Your RefArchive</a>
             <a href="">Profile</a>
             <a href="">Add to RefArchive</a>
-            <a href="">Log Out</a>
+            <a href="{{ url_for('logout') }}">Log Out</a>
             <a href="">Log In</a>
             <a href="{{ url_for('register') }}">Register</a>
           </ul>
