--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Register{% endblock %}
 {% block content %}
 
     <h3 class="center-align">Register</h3>
