--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,9 @@
             <a href="{{ url_for('home_page') }}">Home</a>
             <a href="">Your RefArchive</a>
             <a href="">Profile</a>
-            <a href="">Add to RefArchive</a>
+            <a href="{{ url_for('add_archive') }}">Add to RefArchive</a>
             <a href="{{ url_for('logout') }}">Log Out</a>
-            <a href="">Log In</a>
+            <a href="{{ url_for('login') }}">Log In</a>
             <a href="{{ url_for('register') }}">Register</a>
           </ul>
           <div class="burger">
@@ -50,7 +50,7 @@
     </section>    
 
     <!-- Main Page Content Section -->
-    <main class="main_content_section" aria-label="Main Content">
+    <main class="main_content_section container" aria-label="Main Content">
     {% block content %}
     {% endblock %}
     </main>
