--- a/templates/base.html
+++ b/templates/base.html
@@ -15,14 +15,13 @@
 </head>
 <body>
     <header>
-        <nav class="grey darken-3">
+        <nav class="nav-extended grey darken-3">
           <div class="logo">
             <a href="{{ url_for('home_page') }}">RefArchive</a>
           </div>
           <ul class="nav-links">
             <a href="{{ url_for('home_page') }}">Home</a>
-            <a href="">Your RefArchive</a>
-            <a href="">Profile</a>
+            <a href="{{ url_for('your_archive', username=session['user']) }}">Your RefArchive</a>
             <a href="{{ url_for('add_archive') }}">Add to RefArchive</a>
             <a href="{{ url_for('logout') }}">Log Out</a>
             <a href="{{ url_for('login') }}">Log In</a>
@@ -37,7 +36,7 @@
     </header>
 
     <!-- Flashed Messages -->
-    <section>
+    <section class="flashes">
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category, message in messages %}
@@ -72,6 +71,7 @@
           </ul>
         </div>
     </footer>
+
 
     <!-- Materiaize compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
