Add required js for materialize selector on form

--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
                 <!-- Register -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large grey darken-3 text-shadow">
-                        Register <i class="fas fa-sign-in-alt"></i>
+                        Log In <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
             </div>
