--- a/templates/detailed_view.html
+++ b/templates/detailed_view.html
@@ -25,8 +25,8 @@
           
         </div>
         <div class="card-action">
-            <a href="{{ url_for('detailed_view', item_id=archive._id) }}" class="grey darken-3 btn">Edit</a>
-            <a href="{{ url_for('detailed_view', item_id=archive._id) }}" class="grey darken-3 btn">Delete</a>
+            <a href="{{ url_for('edit_archive', item_id=archive._id) }}" class="grey darken-3 btn">Edit</a>
+            <a href="{{ url_for('delete_archive', item_id=archive._id) }}" class="grey darken-3 btn">Delete</a>
         </div>
       </div>
     </div>
