--- a/templates/your_archive.html
+++ b/templates/your_archive.html
@@ -3,6 +3,24 @@
 {% block content %}
     <h3 class="center-align">Your RefArchive</h3>
 
+    <div class="row card-panel grey lighten-5">
+        <form action="{{ url_for('search') }}" method="post" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12 m8">
+                    <i class="fas fa-search prefix grey-text text-darken-4"></i>
+                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                    <label for="query">Search Tasks</label>
+                </div>
+                <div class="col s12 m4">
+                    <a href="{{ url_for('your_archive') }}" class="red btn text-shadow">Reset</a>
+                    <button type="submit" class="grey darken-1 btn text-shadow">
+                        <i class="fas fa-search left"></i> Search
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+
     <table class="striped grey darken-2">
         <thead>
         <tr>
