Update nav and footer style

--- a/templates/base.html
+++ b/templates/base.html
@@ -66,13 +66,13 @@
         <div id="footer_social">
           <ul>
             <li><a href="http://www.youtube.com" target="_blank" aria-label="Link to our Youtube channel"><i
-                  class="fa-brands fa-youtube"></i></a></li>
+                  class="fab fa-youtube"></i></a></li>
             <li><a href="http://www.twitter.com" target="_blank" aria-label="Link to our Twitter"><i
-                  class="fa-brands fa-twitter"></i></a></li>
+                  class="fab fa-twitter"></i></a></li>
             <li><a href="http://www.facebook.com" target="_blank" aria-label="Link to our Facebook page"><i
-                  class="fa-brands fa-facebook"></i></a></li>
+                  class="fab fa-facebook"></i></a></li>
             <li><a href="http://www.instagram.com" target="_blank" aria-label="Link to our Instagram page"><i
-                  class="fa-brands fa-instagram"></i></a></li>
+                  class="fab fa-instagram"></i></a></li>
           </ul>
         </div>
     </footer>
