--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,7 +36,6 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background: rgba(51, 51, 51, 0.8);
     display: flex;
     height: 60px;
     justify-content:space-around;
@@ -45,13 +44,16 @@ nav {
     z-index: 100;
 }
 
+nav .logo {
+    font-size: 2rem;
+}
+
 .nav-links {
     display: flex;
     margin-top: auto;
     margin-bottom: auto;
     justify-content:space-around;
     width: 50%;
-    text-transform: uppercase;
     z-index: 100;
 }
 
@@ -61,7 +63,6 @@ nav {
     height: 30px;
     line-height: 30px;
     text-align: center;
-    text-transform: uppercase;
     text-decoration: none;
     color: #fff;
     border-bottom:2px solid transparent;
@@ -71,7 +72,6 @@ nav {
 
 .nav-links a:hover {
     font-weight: bold;
-    letter-spacing: 5px;
     background: rgba(51, 51, 51, 0.5);
 }
 
