--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
 </head>
 <body>
     <header>
+      <!-- Nav JS this is a navbar I modified from another website I've been working on 
+            originally modified from https://jit.codes/r/Ofcq7DgOjpxUzbny1NhVR -->
         <nav class="nav-extended grey darken-3">
           <div class="logo">
             <a href="{{ url_for('home_page') }}">RefArchive</a>
