--- a/templates/home.html
+++ b/templates/home.html
@@ -35,8 +35,8 @@
                 knowledge archive today!</p>
             </div>
             <div class="card-action">
-                <a href="{{ url_for('register') }}">Register</a>
-                <a href="{{ url_for('login') }}">Log In</a>
+                <a href="{{ url_for('register') }}" class="grey darken-4 btn text-shadow">Register</a>
+                <a href="{{ url_for('login') }}" class="grey darken-4 btn text-shadow">Log In</a>
             </div>
         </div>
     </div>
