Change card title span to h1

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
     <div class="col s12 m8 offset-m2">
         <div class="card grey darken-1">
             <div class="card-content white-text">
-                <span class="card-title">Welcome to RefArchive - Your Personal Knowledge Hub!</span>
+                <h1 class="card-title">Welcome to RefArchive - Your Personal Knowledge Hub!</h1>
 
                 <p>At RefArchive, we believe in the power of curated wisdom. Our platform is designed to be your digital
                 sanctuary, where you can effortlessly save and organize extracts from books, online articles, and
