Change section for flashed massages to a div

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
     </header>
 
     <!-- Flashed Messages -->
-    <section class="flashes">
+    <div class="flashes">
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category, message in messages %}
@@ -53,7 +53,7 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-    </section>    
+          </div>    
 
     <!-- Main Page Content Section -->
     <main class="main_content_section container" aria-label="Main Content">
