Change link text colour so it stands out from bg

--- a/templates/detailed_view.html
+++ b/templates/detailed_view.html
@@ -12,7 +12,7 @@
           <p>{{ archive.ref_source }}</p>
           
           <h5>Source link</h5>
-          <p><a href="{{ archive.ref_link }}">{{ archive.ref_link }}</a></p>
+          <p><a href="{{ archive.ref_link }}" class="grey-text text-darken-4">{{ archive.ref_link }}</a></p>
 
           <h5>Content</h5>
           {{ archive.ref_content | safe }}
